--- a/src/routes/qwikcity/integrations/overview/index.mdx
+++ b/src/routes/qwikcity/integrations/overview/index.mdx
@@ -1,25 +1,25 @@
 ---
-title: Qwik City Integration
+title: Intégration de Qwik City
 ---
 
-# Integrations
+# Intégrations
 
-Qwik comes with built-in integrations to make it easy to connect to your favorite services, use your favorite styling or testing tools and deploy your aplication to common services such as Cloudflare, Netlify or Express server, and the [Static Site Generator (SSG)](https://qwik.builder.io/qwikcity/static-site-generation/static-site-config/).
+Qwik est livré avec des intégrations intégrées pour faciliter la connexion à vos services préférés, l'utilisation de vos outils de style ou de test préférés et le déploiement de votre application vers des services communs tels que Cloudflare, Netlify ou Express server, et le [Générateur de site statique (SSG)](https://qwik.builder.io/qwikcity/static-site-generation/static-site-config/).
 
-Once you create a Qwik City application, run the following command to add new integrations:
+Une fois que vous avez créé une application Qwik City, exécutez la commande suivante pour ajouter de nouvelles intégrations :
 
 ```shell
 npm run qwik add
 ```
 
-It will prompt you to select the integration you want to add. Once you select an integration, it will be added to your application and you can start using it.
+Vous serez invité à sélectionner l'intégration que vous souhaitez ajouter. Une fois que vous aurez sélectionné une intégration, elle sera ajoutée à votre application et vous pourrez commencer à l'utiliser.
 
-## Available Integrations
+## Intégrations disponibles
 
 - [Cloudflare Pages](/qwikcity/adaptors/cloudflare-pages/index.mdx)
 - [Express](/qwikcity/adaptors/node/index.mdx)
 - [Netlify Edge](/qwikcity/adaptors/netlify-edge/index.mdx)
-- [Static Site Generator (SSG)](/qwikcity/static-site-generation/overview/index.mdx)
+- [Générateur de sites statiques (SSG)](/qwikcity/static-site-generation/overview/index.mdx)
 - [Tailwind CSS](/qwikcity/integrations/tailwind/index.mdx)
 - [Vitest](/qwikcity/integrations/vitest/index.mdx)
 - [React](/qwikcity/integrations/react/index.mdx)
