--- a/src/routes/qwikcity/integrations/vitest/index.mdx
+++ b/src/routes/qwikcity/integrations/vitest/index.mdx
@@ -4,24 +4,24 @@ title: Vitest
 
 # Vitest
 
-[Vitest](https://vitest.dev/) is a blazing fast unit test framework powered by Vite. Because QwikCity uses [Vite](https://vitejs.dev/) by default, Vitest is our defacto unit test framework.
+[Vitest](https://vitest.dev/) est un framework de test unitaire très rapide développé par Vite. Parce que QwikCity utilise [Vite](https://vitejs.dev/) par défaut, Vitest est notre framework de test unitaire de facto.
 
-## Usage
+## Utilisation
 
-You can add vitest easily by using the following Qwik starter script:
+Vous pouvez ajouter vitest facilement en utilisant le script de démarrage Qwik suivant :
 
 ```shell
 npm run qwik add vitest
 ```
 
-After running the command, vitest will be installed and a new component will be added to your project. The component will be added to the `src/components/example` directory as long as a new unit test named `example.spec.ts`.
+Après avoir exécuté la commande, vitest sera installé et un nouveau composant sera ajouté à votre projet. Le composant sera ajouté au répertoire `src/components/example` ainsi qu'un nouveau test unitaire nommé `example.spec.ts`.
 
 ```tsx
 import { createDOM } from '@builder.io/qwik/testing';
 import { test, expect } from 'vitest';
 import { ExampleTest } from './example';
 
-test(`[ExampleTest Component]: Should render ⭐`, async () => {
+test(`[Composant ExampleTest]: Devrait rendre ⭐`, async () => {
   const { screen, render } = await createDOM();
   await render(<ExampleTest flag={true} />);
   expect(screen.outerHTML).toContain('⭐');
@@ -29,13 +29,13 @@ test(`[ExampleTest Component]: Should render ⭐`, async () => {
   expect(div.outerHTML).toContain('⭐');
 });
 
-test(`[ExampleTest Component]: Should render 💣`, async () => {
+test(`[Composant ExampleTest]: Devrait rendre 💣`, async () => {
   const { screen, render } = await createDOM();
   await render(<ExampleTest flag={false} />);
   expect(screen.outerHTML).toContain('💣');
 });
 
-test(`[ExampleTest Component]: Click counter +1`, async () => {
+test(`[Composant ExampleTest]: Clique compteur +1`, async () => {
   const { screen, render, userEvent } = await createDOM();
   await render(<ExampleTest flag={true} />);
 
